# soul-avatar-matcher-space

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: llm_settings.py  settings.py
proto/: a2a_session.proto  a2a_session_pb2.py  a2a_session_pb2.pyi  a2a_session_pb2_grpc.py  avatar.proto  avatar_pb2.py  avatar_pb2.pyi  avatar_pb2_grpc.py
scripts/: weekly_knowledge_update.py
src/: __about__.py  __main__.py  api.py  dashboard.py
src/a2a/: async_server.py  debate_topics.py  server.py  session_manager.py  simulate.py  slm_reasoner.py  topic_selector.py
src/avatar/: capsule_builder.py
src/consent/: gate.py
src/ingestion/: async_client.py  data_client.py
src/knowledge/: crawler.py  notifications.py  summarizer.py  updater.py
src/matching/: scorer.py
src/personality/: data_loader.py  extractor.py  siamese_model.py  trainer.py  updater.py
src/reports/: generator.py  prompts.py
src/vault/: manager.py  schema.py
