[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-avatar-matcher"
version = "1.0.0"
description = "Privacy-first AI compatibility engine — your Cognitive Twin finds your soul-level match."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "soul-avatar-matcher contributors" },
]
keywords = [
    "personality",
    "compatibility",
    "siamese-network",
    "big-five",
    "cognitive-twin",
    "agent-to-agent",
    "privacy-first",
    "machine-learning",
    "nlp",
    "a2a",
    "grpc",
    "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Sociology",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "protobuf>=4.25.0",
    "pysqlcipher3>=1.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "crawl4ai>=0.3.0",
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
    "mypy>=1.15",
    "types-protobuf>=5.29",
    "types-requests>=2.32",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
all = [
    "soul-avatar-matcher[dev,docs]",
]

[project.scripts]
soul-avatar-matcher = "src.__main__:main"
soul-avatar-knowledge = "scripts.weekly_knowledge_update:main"

[project.urls]
Homepage = "https://github.com/dungnotnull/soul-avatar-matcher-space"
"Bug Reports" = "https://github.com/dungnotnull/soul-avatar-matcher-space/issues"
"Source" = "https://github.com/dungnotnull/soul-avatar-matcher-space"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "proto*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["config", "proto", "src", "scripts"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["proto/.*_pb2.*"]
